# EP-POO2023

./: .gitignore  CMakeLists.txt  README.md  makefile
.github/workflows/: cpp-build.yml
src/: Amplificador.cpp  Amplificador.h  Circuito.cpp  Circuito.h  CircuitoMISO.cpp  CircuitoMISO.h  CircuitoSISO.cpp  CircuitoSISO.h  Derivador.cpp  Derivador.h  Integrador.cpp  Integrador.h  Modulo.cpp  Modulo.h  ModuloEmParalelo.cpp  ModuloEmParalelo.h  ModuloEmSerie.cpp  ModuloEmSerie.h  ModuloRealimentado.cpp  ModuloRealimentado.h  PersistenciaDeModulo.cpp  PersistenciaDeModulo.h  Piloto.cpp  Piloto.h  Sinal.cpp  Sinal.h  Somador.cpp  Somador.h  main.cpp  menu.cpp
tests/: CMakeLists.txt  piloto_automatic_input.txt  piloto_automatic_sample.txt  propria_sequencia_input.txt  propria_sequencia_sample.txt  simple_compare.sh  simple_unit_test.cpp
